# Laboratory_work_3

./: CMakeLists.txt  main.cpp
.github/workfllows/: release.yml
